------------------------------------------------------------
System Installer v2.4.11 (not yet released)
------------------------------------------------------------
    - Do not try to setup DNS within the DHCP configuration on a private
      network (patch from Olivier Lahaye).
    - Improve the management of the /etc/hosts when adding new clients.

------------------------------------------------------------
System Installer v2.4.10 
------------------------------------------------------------
    - Clean up the code for the management of partitions within an image.
    - Fix a few issues when dealing with images' partitions.

------------------------------------------------------------
System Installer v2.4.9
------------------------------------------------------------
    - Improve the help output of the mksiimage command (patch from Olivier 
      Lahaye).
    - Continue to fix issues with CCISS controllers (patch from Olivier
      Lahaye).
    - Improve the disk partitioning capability, e.g., support of GTP 
      partitions (patch from Olivier Lahaye).

------------------------------------------------------------
System Installer v2.4.8 
------------------------------------------------------------
    - Fix a bug in the Partition/IA.pm.

------------------------------------------------------------
System Installer v2.4.7
------------------------------------------------------------
    - Remove debugging info.
    - Improve the support of CCISS controllers.
    - First set of modifications to support again client removal.

------------------------------------------------------------
System Installer v2.4.6
------------------------------------------------------------
    - More asserts to try to avoid segfaults.
    - Improve command output.
    - Fix partitionning using when using CCISS controllers 
      (patch from Olivier Lahaye).

------------------------------------------------------------
System Installer v2.4.5